--- a/portfolio.html
+++ b/portfolio.html
@@ -18,39 +18,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Шапка -->
     <header class="header">
       <div class="conteiner header-div">
-        <nav class="flex nav-header">
-          <a href="./index.html" class="logo"> <span class="web">Web</span>Studio </a>
+        <nav class="flex header-div__nav">
+          <a href="./index.html" class="header-div__logo"> <span class="web">Web</span>Studio </a>
           <ul class="list flex">
             <li>
-              <a href="./index.html" class="header-link">Студія</a>
+              <a href="./index.html" class="header-div__link">Студія</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="header-link active">Портфоліо</a>
+              <a href="./portfolio.html" class="header-div__link active">Портфоліо</a>
             </li>
             <li>
-              <a href="/" class="header-link">Контакти</a>
+              <a href="/" class="header-div__link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list flex head-ul">
+        <ul class="list flex header-nav">
           <!-- Посилання на почту -->
-          <li class="li-header">
-            <a href="mailto:info@devstudio.com" class="header-tel"
-              ><svg class="header-icon">
+          <li class="header-nav_list">
+            <a href="mailto:info@devstudio.com" class="header-nav__tel"
+              ><svg class="header-nav__icon">
                 <use href="./images/icons.svg#icon-mail"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <!-- Посилання на телефон -->
           <li>
-            <a href="tel:+380961111111" class="header-tel"
-              ><svg class="header-icon">
+            <a href="tel:+380961111111" class="header-nav__tel"
+              ><svg class="header-nav__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -63,28 +63,28 @@
       <section class="section">
         <div class="conteiner">
           <h1 hidden>Список</h1>
-          <ul class="list flex portfo-btn">
-            <li><button type="button" class="portfolio-btn">Усі</button></li>
-            <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
-            <li><button type="button" class="portfolio-btn">Додатки</button></li>
-            <li><button type="button" class="portfolio-btn">Дизайн</button></li>
-            <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
+          <ul class="list flex button-portfolio">
+            <li><button type="button" class="button-portfolio__list">Усі</button></li>
+            <li><button type="button" class="button-portfolio__list">Веб-сайти</button></li>
+            <li><button type="button" class="button-portfolio__list">Додатки</button></li>
+            <li><button type="button" class="button-portfolio__list">Дизайн</button></li>
+            <li><button type="button" class="button-portfolio__list">Маркетинг</button></li>
           </ul>
           <ul class="list flex wrap">
             <li>
               <div class="overlay">
                 <img src="./images/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Технокряк</h2>
+                <p class="portfolio-content__text">Веб-сайт</p>
               </div>
             </li>
             <li>
@@ -96,16 +96,16 @@
                   height="294"
                 />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-text">Дизайн</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-content__text">Дизайн</p>
               </div>
             </li>
             <li>
@@ -117,112 +117,112 @@
                   height="294"
                 />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Ресторан Seafood</h2>
-                <p class="portfolio-text">Додаток</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Ресторан Seafood</h2>
+                <p class="portfolio-content__text">Додаток</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Навушники.jpg" alt="Навушники" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Проєкт Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Проєкт Prime</h2>
+                <p class="portfolio-content__text">Маркетинг</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Коробки.jpg" alt="Коробки" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Проєкт Boxes</h2>
-                <p class="portfolio-text">Додаток</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Проєкт Boxes</h2>
+                <p class="portfolio-content__text">Додаток</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Монітор.jpg" alt="Монітор" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Inspiration has no Borders</h2>
+                <p class="portfolio-content__text">Веб-сайт</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Журнал.jpg" alt="Журнал" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Видання Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Видання Limited Edition</h2>
+                <p class="portfolio-content__text">Дизайн</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Бірка.jpg" alt="Бірка" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Проєкт LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Проєкт LAB</h2>
+                <p class="portfolio-content__text">Маркетинг</p>
               </div>
             </li>
             <li>
               <div class="overlay">
                 <img src="./images/Ноутбук.jpg" alt="Ноутбук" width="370" height="294" />
                 <div class="box">
-                  <p class="technocrack">
+                  <p class="overlay-technocrack">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
               </div>
-              <div class="cont-wrap">
-                <h2 class="portfolio-tittle">Growing Business</h2>
-                <p class="portfolio-text">Додаток</p>
+              <div class="portfolio-content">
+                <h2 class="portfolio-content__tittle">Growing Business</h2>
+                <p class="portfolio-content__text">Додаток</p>
               </div>
             </li>
           </ul>
@@ -233,49 +233,49 @@
     <footer class="basement">
       <div class="conteiner flex">
         <div>
-          <a href="https://vanvalera.github.io/goit-markup-hw-02/index.html" class="logo-footer">
+          <a href="https://vanvalera.github.io/goit-markup-hw-02/index.html" class="basement__logo">
             <span class="web">Web</span>Studio
           </a>
-          <address class="style-address">
+          <address class="adress-style">
             <ul class="list">
-              <li class="item-footer">
-                <a href="https://goo.gl/maps/cJ9QzEwfVTvkRfvY8" class="list-address"
+              <li class="adress-style__item">
+                <a href="https://goo.gl/maps/cJ9QzEwfVTvkRfvY8" class="adress-style__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item-footer">
-                <a href="mailto:info@devstudio.com" class="list-tel">info@devstudio.com</a>
+              <li class="adress-style__item">
+                <a href="mailto:info@devstudio.com" class="adress-style__tel">info@devstudio.com</a>
               </li>
-              <li class="item-footer">
-                <a href="tel:+380961111111" class="list-tel">+38 096 111 11 11</a>
+              <li class="adress-style__item">
+                <a href="tel:+380961111111" class="adress-style__tel">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="footer-social">
-          <h3 class="tittle-add">приєднуйтесь</h3>
+          <h3 class="footer-social__tittle">приєднуйтесь</h3>
           <ul class="flex list">
             <li class="Developer">
-              <a href="/" class="icons-list-team borders"
-                ><svg class="icon-our-team">
+              <a href="/" class="Developer__icons Developer__borders"
+                ><svg class="Developer__svg">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="Developer">
-              <a href="/" class="icons-list-team borders"
-                ><svg class="icon-our-team">
+              <a href="/" class="Developer__icons Developer__borders"
+                ><svg class="Developer__svg">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="Developer">
-              <a href="/" class="icons-list-team borders"
-                ><svg class="icon-our-team">
+              <a href="/" class="Developer__icons Developer__borders"
+                ><svg class="Developer__svg">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="Developer">
-              <a href="/" class="icons-list-team borders"
-                ><svg class="icon-our-team">
+              <a href="/" class="Developer__icons Developer__borders"
+                ><svg class="Developer__svg">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
