--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 height="260"
               />
               <h3 class="team-worker__tittle">Ігор Дем'яненко</h3>
-              <p lang="en" class="tittle-worker-text">Product Designer</p>
+              <p lang="en" class="team-worker__text">Product Designer</p>
               <ul class="flex list">
                 <li class="Developer Developer__Igor">
                   <a href="/" class="Developer__icons"
@@ -218,7 +218,7 @@
                 height="260"
               />
               <h3 class="team-worker__tittle">Ольга Рєпіна</h3>
-              <p lang="en" class="tittle-worker-text">Frontend Developer</p>
+              <p lang="en" class="team-worker__text">Frontend Developer</p>
               <ul class="flex list">
                 <li class="Developer Developer__Igor">
                   <a href="/" class="Developer__icons"
@@ -254,7 +254,7 @@
                 height="260"
               />
               <h3 class="team-worker__tittle">Микола Тарасов</h3>
-              <p lang="en" class="tittle-worker-text">Marketing</p>
+              <p lang="en" class="team-worker__text">Marketing</p>
               <ul class="flex list our-team-icn">
                 <li class="Developer Developer__Igor">
                   <a href="/" class="Developer__icons"
@@ -290,7 +290,7 @@
                 height="260"
               />
               <h3 class="team-worker__tittle">Михайло Єрмаков</h3>
-              <p lang="en" class="tittle-worker-text">UI Designer</p>
+              <p lang="en" class="team-worker__text">UI Designer</p>
               <ul class="flex list">
                 <li class="Developer Developer__Igor">
                   <a href="/" class="Developer__icons"
